BisonCodeGenerate/test_files/if-else.sy
int main(){
    int a = 1;
    int b = 2;
    int c123 = 2;
    int d321 = 2;
    if (a + b < 3)
    {
        a = b + a;
    }

    if(a>2&&b==3||c123==2&&d321>c123)
        b = b + 3;
    else
        a = b *2;

    if(a == 1 || b == 2){
        if (a + b == 4)
        {
            a = 0;
        }else
        {
            a = 1;
        }
    }

    if (1||a==1){
        a =  1;
    }
    if (a==2||6-5){
        a =  2;
    }
    if (3-3||a==3){
        a =  3;
    }
    if (a==4||0){
        a =  4;
    }
    if (a==5&&1){
        a =  5;
    }
    if (3-2&&a==6){
        a =  6;
    }
    if (a==7&&3-3){
        a =  7;
    }
    if (0&&a==8){
        a =  8;
    }
    if(1&&a==9||b==1){
        a =  9;
    }
    if (0||a==10&&b==10){
        a =  10;
    }

//error
    //if(a){
    //    a =  a;
    //}
}